# TKAN

./: AGENTS.md  config.mqh  config.yaml  copy_data.py  data.ex5  data.mq5  live.ex5  live.mq5  model.onnx  model_clean.onnx  norm_params.csv  norm_params.mqh  pyproject.toml  run.py
config/: 9.yaml  default.yaml  dw.yaml  ed.yaml  i.yaml
data/: 1h.csv
examples/: archive.py  first_jax.py
live/: adx.mq5  bollinger.mq5  candle_ratios.mq5  common.mq5  ema_cross.mq5  garman_klass.mq5  higher_timeframes.mq5  log_returns.mq5  macd.mq5  price_to_ema.mq5  price_to_sma.mq5  rolling_volatility.mq5  rsi.mq5  time_features.mq5
models/2604-055656/: config.mqh  config.yaml  model.onnx  norm_params.mqh
models/2604-055952/: config.yaml  model.onnx
models/2604-130729/: model.onnx
models/2604-132114/: config.mqh  config.yaml  details.md  model.onnx
models/2604-133001/: config.mqh  config.yaml  details.md  model.onnx
models/2604-142633/: config.mqh  config.yaml  confusion-matrix.md  details.md  model.onnx
models/2604-143558/: config.mqh  config.yaml  confusion-matrix.md  details.md  model.onnx  norm_params.mqh
models/2604-144756/: config.mqh  config.yaml  confusion-matrix.md  details.md  model.onnx  norm_params.mqh
models/2604-145120/: config.mqh  config.yaml  confusion-matrix.md  details.md  model.onnx  norm_params.mqh
tests/: test_tkan.py
tkan/: __init__.py  config.py  data.py  export.py  loss.py  model.py  preprocess.py  tkan_apply.py  tkan_cell.py  tkan_forward.py  tkan_init.py  train.py
tkan/features/: __init__.py  adx.py  bollinger.py  builder.py  macd.py  (+11 more)
